----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-02-14 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_table_info.php: avoid errors #1046, no database selected
      in MySQL 5.0.2

2005-02-13 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/french update
    * server_privileges.php: bug #1118137, host not changing when editing user

2005-02-10 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: new FAQ 1.32 about using HTTP auth under IIS

2005-02-09 Marc Delisle  <lem9@users.sourceforge.net>
    * config.inc.php, Documentation.html: bug #1115327, document the
      maximum number of characters for blowfish_secret

2005-02-09 Alexander M. Turek  <me@derrabus.de>
    * lang/italian-*.inc.php: Updates, thanks to Pietro Danesi.

2005-02-08 Michal Čihař  <michal@cihar.com>
    * export.php: Fix export of SQL for Safari (bug #1113015).

2005-02-07 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/dbi/*: bug #1116933, PMA_DBI_free_result():
      do not send a boolean to mysqli_free_result() or mysql_free_result(),
      it expects a result resource
    * libraries/tbl_move_copy.php: bug #1117112, commands out of sync when
      using "copy table" operation
    * libraries/common.lib.php: bug #1114363, error when SHOW DATABASES is
      disabled

2005-02-07 Alexander M. Turek  <me@derrabus.de>
    * libraries/mcrypt.lib.php: Bug #1117907 ("wrong parameter count" with
      php 4.1.x.

2005-02-06 Alexander M. Turek  <me@derrabus.de>
    * header.inc.php, tbl_properties_table_info.php: View detection for
      header.inc.php.
    * tbl_properties_links.php: Adjusted tab bar for views.

2005-02-05 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_relation.php: removed comments handling (pmadb-style) from relation view

2005-02-04 Michal Čihař  <michal@cihar.com>
    * tbl_change.php: Fix TIMESTAMP editing on MySQL 4.1 (bug #1114120).

2005-02-03 Alexander M. Turek  <me@derrabus.de>