@@ -1,0 +1,3 @@
+.print_ignore {
+    display: none;
+}
